2025-03-08T00:37:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13731930758 # 587
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-08
* notice: last 14d: unq all: 8 10
* notice: prev accum: outdated-unq outdated-all / unq all: 404 1404 / 411 1412
* notice: next accum: outdated-unq outdated-all / unq all: 404 1404 / 413 1414
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-03-07]

2025-03-04T00:48:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13643671356 # 583
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-04
* notice: last 14d: unq all: 6 8
* notice: prev accum: outdated-unq outdated-all / unq all: 404 1404 / 408 1409
* notice: next accum: outdated-unq outdated-all / unq all: 404 1404 / 411 1412
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2025-03-03]

2025-03-03T00:49:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13621094300 # 582
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-03
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 403 1403 / 408 1409
* notice: next accum: outdated-unq outdated-all / unq all: 404 1404 / 408 1409
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-16] / []

2025-03-01T00:52:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13599160868 # 580