@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-08T00:37:52Z",
-  "count_outdated" : 1404,
-  "uniques_outdated" : 404,
+  "timestamp" : "2025-03-12T00:47:52Z",
+  "count_outdated" : 1405,
+  "uniques_outdated" : 405,
   "count" : 1414,
   "uniques" : 413,
   "views" : [
-    {
-      "timestamp": "2025-02-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-02-26T00:00:00Z",
       "count": 2,
