@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 8,
+  "count": 9,
+  "uniques": 7,
   "views": [
-    {
-      "timestamp": "2025-02-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-02-26T00:00:00Z",
       "count": 2,
